// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputChoiceSet inputChoiceSetCheckboxMultiSelect should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-Checkbox is-checked is-enabled root-68"
      >
        <input
          aria-checked="true"
          aria-label="Red"
          checked=""
          class="input-69"
          id="checkbox-10"
          type="checkbox"
        />
        <label
          class="ms-Checkbox-label label-70"
          for="checkbox-10"
        >
          <div
            class="ms-Checkbox-checkbox checkbox-71"
          >
            <i
              aria-hidden="true"
              class="ms-Checkbox-checkmark checkmark-74"
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            class="ms-Checkbox-text text-73"
          >
            Red
          </span>
        </label>
      </div>
      <div
        class="ms-Checkbox is-enabled root-75"
      >
        <input
          aria-checked="false"
          aria-label="Green"
          class="input-69"
          id="checkbox-11"
          type="checkbox"
        />
        <label
          class="ms-Checkbox-label label-70"
          for="checkbox-11"
        >
          <div
            class="ms-Checkbox-checkbox checkbox-76"
          >
            <i
              aria-hidden="true"
              class="ms-Checkbox-checkmark checkmark-78"
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            class="ms-Checkbox-text text-73"
          >
            Green
          </span>
        </label>
      </div>
      <div
        class="ms-Checkbox is-checked is-enabled root-79"
      >
        <input
          aria-checked="true"
          aria-label="Blue"
          checked=""
          class="input-69"
          id="checkbox-12"
          type="checkbox"
        />
        <label
          class="ms-Checkbox-label label-70"
          for="checkbox-12"
        >
          <div
            class="ms-Checkbox-checkbox checkbox-71"
          >
            <i
              aria-hidden="true"
              class="ms-Checkbox-checkmark checkmark-74"
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            class="ms-Checkbox-text text-73"
          >
            Blue
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputChoiceSet inputChoiceSetChoiceGroup should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class=""
      >
        <div
          class="ms-ChoiceFieldGroup root-57"
          role="radiogroup"
        >
          <div
            class="ms-ChoiceFieldGroup-flexContainer"
          >
            <div
              class="ms-ChoiceField root-58"
            >
              <div
                class="ms-ChoiceField-wrapper"
              >
                <input
                  checked=""
                  class="ms-ChoiceField-input input-59"
                  id="ChoiceGroup4-1"
                  name="ChoiceGroup4"
                  type="radio"
                />
                <label
                  class="ms-ChoiceField-field is-checked field-60"
                  for="ChoiceGroup4-1"
                >
                  <span
                    class="ms-ChoiceFieldLabel"
                    id="ChoiceGroupLabel5-1"
                  >
                    Red
                  </span>
                </label>
              </div>
            </div>
            <div
              class="ms-ChoiceField root-58"
            >
              <div
                class="ms-ChoiceField-wrapper"
              >
                <input
                  class="ms-ChoiceField-input input-59"
                  id="ChoiceGroup4-2"
                  name="ChoiceGroup4"
                  type="radio"
                />
                <label
                  class="ms-ChoiceField-field field-65"
                  for="ChoiceGroup4-2"
                >
                  <span
                    class="ms-ChoiceFieldLabel"
                    id="ChoiceGroupLabel5-2"
                  >
                    Green
                  </span>
                </label>
              </div>
            </div>
            <div
              class="ms-ChoiceField root-58"
            >
              <div
                class="ms-ChoiceField-wrapper"
              >
                <input
                  class="ms-ChoiceField-input input-59"
                  id="ChoiceGroup4-3"
                  name="ChoiceGroup4"
                  type="radio"
                />
                <label
                  class="ms-ChoiceField-field field-65"
                  for="ChoiceGroup4-3"
                >
                  <span
                    class="ms-ChoiceFieldLabel"
                    id="ChoiceGroupLabel5-3"
                  >
                    Blue
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputChoiceSet inputChoiceSetComboBox should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-ComboBox-container "
      >
        <div
          class="ms-ComboBox css-40"
          id="ComboBox0wrapper"
        >
          <input
            aria-autocomplete="both"
            aria-expanded="false"
            autocapitalize="off"
            autocomplete="off"
            class="ms-ComboBox-Input css-41"
            data-is-interactable="true"
            data-lpignore="true"
            id="ComboBox0-input"
            role="combobox"
            spellcheck="false"
            type="text"
            value="Red"
          />
          <button
            aria-hidden="true"
            class="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-48"
            data-is-focusable="false"
            role="presentation"
            tabindex="-1"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-49"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-37 css-56 ms-Button-icon icon-51"
                data-icon-name="ChevronDown"
                role="presentation"
                style="font-family: \\"FabricMDL2Icons\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          aria-atomic="true"
          aria-live="polite"
          class=""
          id="ComboBox0-error"
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InputChoiceSet inputChoiceSetComboBoxMultiSelect should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-ComboBox-container "
      >
        <div
          class="ms-ComboBox css-40"
          id="ComboBox6wrapper"
        >
          <input
            aria-autocomplete="both"
            aria-expanded="false"
            autocapitalize="off"
            autocomplete="off"
            class="ms-ComboBox-Input css-41"
            data-is-interactable="true"
            data-lpignore="true"
            id="ComboBox6-input"
            role="combobox"
            spellcheck="false"
            type="text"
            value="Red"
          />
          <button
            aria-hidden="true"
            class="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-48"
            data-is-focusable="false"
            role="presentation"
            tabindex="-1"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-49"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-37 css-56 ms-Button-icon icon-51"
                data-icon-name="ChevronDown"
                role="presentation"
                style="font-family: \\"FabricMDL2Icons\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          aria-atomic="true"
          aria-live="polite"
          class=""
          id="ComboBox6-error"
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;
